code review remarqs
Signed-off-by: Rehili Ghazwa <ghazwarhili@gmail.com>